[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ChuXiaoYi <895706056@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.0"
uvicorn = "^0.13.4"
peewee = "^3.14.4"
requests = "^2.25.1"
PyMySQL = "^1.0.2"
itsdangerous = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
